--- a/rtabmap_rviz_plugins/CMakeLists.txt
+++ b/rtabmap_rviz_plugins/CMakeLists.txt
@@ -5,6 +5,13 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# For rviz plugins, look for Qt5 before Qt4
+FIND_PACKAGE(Qt5 COMPONENTS Widgets Core Gui QUIET)
+IF(NOT Qt5_FOUND)
+    FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui REQUIRED)
+    INCLUDE(${QT_USE_FILE})
+ENDIF(NOT Qt5_FOUND)
+
 find_package(ament_cmake_ros REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(pluginlib REQUIRED)
